Fix footer z-index ratio to border

--- a/index.css
+++ b/index.css
@@ -188,7 +188,7 @@ body{
   height: max-content;
   margin: auto;
   z-index: -4;
-  background-color: #88A2F2;
+  background-color: #88a2f0;
 }
 
 .container-row{
@@ -209,6 +209,7 @@ body{
   width: 100%;
   height: 100%;
   margin: auto;
+  background-color: #F2F2F2;
 }
 
 .container-content iframe{
@@ -272,11 +273,12 @@ footer.bottom-right p{
 /* iphones */
 
 @media only screen 
-  and (min-device-width: 320px) 
+  /* and (min-device-width: 320px)  */
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
 
   *{
+    width: 100vw;
     padding: 0px;
     margin: 0px;
   }
@@ -290,6 +292,19 @@ footer.bottom-right p{
     height: 100%;
     padding: 0;
     box-shadow: inset 0 0 0 1em #CAC9F2;
+  }
+
+  .navbar{
+    color: #060663;
+    font-size: 1.5em;
+    width: 95vw;
+    height: 10vh;
+    left: 0;
+    margin: 1em;
+    justify-self: center;
+    display: flex;
+    flex-wrap: wrap;
+    position: fixed;
   }
 
   .menu-right{
